--- a/app/src/main/res/layout/activity_admin_home_acitivity.xml
+++ b/app/src/main/res/layout/activity_admin_home_acitivity.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/drawer_layout_admin"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start"
     tools:context=".Admin.AdminHomeAcitivity">
 
-    <fragment
-        android:id="@+id/admin_host_fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+    <include
+        layout="@layout/app_bar_admin"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:defaultNavHost="true"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/admin_navigation" />
+        android:layout_height="match_parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.navigation.NavigationView
+
+        android:id="@+id/nav_view_admin"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_admin"
+        app:menu="@menu/activity_main_admin"/>
+
+
+</androidx.drawerlayout.widget.DrawerLayout>
