--- a/app/src/main/res/navigation/admin_navigation.xml
+++ b/app/src/main/res/navigation/admin_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/adminHomeFragment"
         android:name="com.example.ignite19.Admin.AdminHomeFragment"
-        android:label="fragment_admin_home"
+        android:label="Admin Panel"
         tools:layout="@layout/fragment_admin_home" >
         <action
             android:id="@+id/action_adminHomeFragment_to_adminUpdateEventTiming"
@@ -23,7 +23,7 @@
     <fragment
         android:id="@+id/adminUpdateLeaderBoard"
         android:name="com.example.ignite19.Admin.AdminUpdateLeaderBoard.AdminUpdateLeaderBoard"
-        android:label="fragment_admin_update_leader_board"
+        android:label="Update Leader Board"
         tools:layout="@layout/fragment_admin_update_leader_board" >
         <action
             android:id="@+id/action_adminUpdateLeaderBoard_to_adminHomeFragment"
@@ -32,11 +32,32 @@
     <fragment
         android:id="@+id/adminUpdateEventTiming"
         android:name="com.example.ignite19.Admin.AdminUpdateEventTiming"
-        android:label="fragment_admin_update_event_timing"
+        android:label="Update event Timing"
         tools:layout="@layout/fragment_admin_update_event_timing" />
     <fragment
         android:id="@+id/seeParticipantsAdmin"
         android:name="com.example.ignite19.Admin.SeeParticipants.SeeParticipantsAdmin"
-        android:label="fragment_see_participants_admin"
+        android:label="See Participants"
         tools:layout="@layout/fragment_see_participants_admin" />
+
+    <fragment android:id="@+id/nav_about_ignite_admin"
+        android:name="com.example.ignite19.ui.AboutIGNITE.Fragment_AboutIgnite"
+        android:label="About IGNITE"
+        tools:layout="@layout/fragment_about_ignite"/>
+
+    <fragment android:id="@+id/nav_about_app_admin"
+        android:name="com.example.ignite19.ui.AboutApp.Fragment_AboutApp"
+        android:label="@string/menu_about_app"
+        tools:layout="@layout/fragment_about_app"/>
+
+    <fragment android:id="@+id/nav_sponsors_admin"
+        android:name="com.example.ignite19.ui.Sponsors.Fragment_Sponsors"
+        android:label="@string/menu_sponsors"
+        tools:layout="@layout/fragment_sponsors"/>
+
+    <fragment
+        android:id="@+id/nav_schedule_admin"
+        android:name="com.example.ignite19.ui.schedule.FragmentSchedule"
+        android:label="@string/nav_schedule"
+        tools:layout="@layout/fragment_schedule" />
 </navigation>
