--- a/app/src/main/res/layout/fragment_admin_home.xml
+++ b/app/src/main/res/layout/fragment_admin_home.xml
@@ -22,15 +22,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_marginTop="32dp"
-                android:id="@+id/textView6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="ADMIN PANEL"
-                android:textAlignment="center"
-                android:textSize="24sp" />
-
             <LinearLayout
                 android:layout_marginTop="16dp"
                 android:layout_width="match_parent"
@@ -205,28 +196,29 @@
                         <ImageView
                             android:layout_width="64dp"
                             android:layout_height="64dp"
+                            android:background="@drawable/ic_participants"
                             android:padding="10dp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="Add"
+                            android:text="See Participants"
                             android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:padding="5dp"
-                            android:text="Check your bank activities"
-                            android:textColor="@android:color/darker_gray" />
 
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:layout_margin="10dp"
                             android:background="@color/lightGray" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:padding="5dp"
+                            android:text="See eventwise participants"
+                            android:textColor="@android:color/darker_gray" />
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
