--- a/app/src/main/res/navigation/admin_navigation.xml
+++ b/app/src/main/res/navigation/admin_navigation.xml
@@ -31,8 +31,8 @@
     </fragment>
     <fragment
         android:id="@+id/adminUpdateEventTiming"
-        android:name="com.example.ignite19.Admin.AdminUpdateEventTiming"
-        android:label="Update event Timing"
+        android:name="com.example.ignite19.Admin.UpdateEventTiming.AdminUpdateEventTiming"
+        android:label="Update Event timing"
         tools:layout="@layout/fragment_admin_update_event_timing" />
     <fragment
         android:id="@+id/seeParticipantsAdmin"
