--- a/app/src/main/res/layout/fragment_see_participants.xml
+++ b/app/src/main/res/layout/fragment_see_participants.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.SeeParticipants">
 
     <!-- TODO: Update blank fragment layout -->
@@ -27,16 +28,25 @@
            android:text="search"
 
            />
+       <com.google.android.material.card.MaterialCardView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_margin="10dp"
+           app:cardCornerRadius="10dp"
+           app:cardElevation="10dp"
+           >
 
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
-
            android:id="@+id/ll"
-           android:orientation="vertical">
+           android:orientation="vertical"
+           android:layout_margin="10dp"
+           android:layout_gravity="center"
+           >
 
        </LinearLayout>
-
+       </com.google.android.material.card.MaterialCardView>
 
 
    </LinearLayout>
