--- a/app/src/main/res/layout/fragment_see_participants_admin.xml
+++ b/app/src/main/res/layout/fragment_see_participants_admin.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Admin.SeeParticipants.SeeParticipantsAdmin">
 
     <!-- TODO: Update blank fragment layout -->
@@ -28,17 +29,26 @@
 
             />
 
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            app:cardElevation="10dp"
+            app:cardCornerRadius="10dp"
+            >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
             android:id="@+id/ll"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginLeft="20dp"
+            >
 
         </LinearLayout>
-
+        </com.google.android.material.card.MaterialCardView>
 
 
     </LinearLayout>
 
-</FrameLayout>
+</ScrollView>
