--- a/app/src/main/res/layout/card_for_registered_events.xml
+++ b/app/src/main/res/layout/card_for_registered_events.xml
@@ -6,6 +6,34 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+
+    <com.mikhaellopez.circularimageview.CircularImageView
+        android:id="@+id/imageView_user_event_image"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/avatars[0]" />
+
+    <TextView
+        android:id="@+id/text_view_event_name_regitstered_events"
+        android:layout_width="64dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="Event Name asn dakjs asd"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imageView_user_event_image"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_user_event_image" />
+</androidx.constraintlayout.widget.ConstraintLayout>
+<!--
     <androidx.cardview.widget.CardView
         android:id="@+id/card_xxxx"
         android:layout_width="128dp"
@@ -45,3 +73,5 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+-->
