--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -21,6 +21,7 @@
                 android:background="@color/colorPrimary"
                 app:tabMode="fixed"
                 app:tabGravity="fill"
+                app:tabTextColor="@color/white"
                 app:tabIndicatorColor="@color/colorAccent"
                 android:id="@+id/tablayout_id"
                 ></com.google.android.material.tabs.TabLayout>
