--- a/app/src/main/res/layout/item_day1.xml
+++ b/app/src/main/res/layout/item_day1.xml
@@ -28,56 +28,68 @@
 
 
                     >
-                    <LinearLayout
+                    <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical"
                         android:background="#ef5350"
                         >
+
                         <TextView
+                            android:id="@+id/textView8"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Oct"
+                            android:textColor="#ffebee"
                             android:textSize="30dp"
                             android:textStyle="bold"
-                            android:textColor="#ffebee"
-                            android:layout_marginLeft="10dp"
-                            />
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.533"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
                         <TextView
+                            android:id="@+id/event_date_textview"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="4dp"
+                            android:text="11"
+                            android:textColor="#ffebee"
                             android:textSize="20dp"
-                            android:layout_marginLeft="20dp"
-
-                            android:textColor="#ffebee"
                             android:textStyle="bold"
-                            android:text="12"
-                            />
+                            app:layout_constraintEnd_toEndOf="@+id/textView8"
+                            app:layout_constraintStart_toStartOf="@+id/textView8"
+                            app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
                         <TextView
+                            android:id="@+id/event_day_textview"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="15sp"
-                            android:layout_marginLeft="5dp"
-
+                            android:layout_marginTop="4dp"
+                            android:text="Friday"
                             android:textColor="#ffebee"
-                            android:text="Saturday"
-                            android:layout_marginRight="10dp"
-                            />
+                            android:textSize="15sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/event_date_textview" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="15sp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginTop="5dp"
-                            android:textColor="#ffebee"
                             android:id="@+id/date_and_time_text_view"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="4dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginBottom="8dp"
                             android:text="10:00 pm"
-                            android:layout_marginBottom="10dp"
-                            />
+                            android:textColor="#ffebee"
+                            android:textSize="15sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/event_day_textview" />
 
-                    </LinearLayout>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
