--- a/app/src/main/res/layout/venue_list_recycler_card.xml
+++ b/app/src/main/res/layout/venue_list_recycler_card.xml
@@ -9,6 +9,8 @@
 
 
     <com.google.android.material.card.MaterialCardView
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
