--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
 
     <color name="btn_text_color">#ffffff</color>
 
-    <color name="igniteColor1">#470604</color>
+    <color name="igniteColor1">#3F51B5</color>
     <color name="igniteColor2">#600700</color>
     <color name="igniteColor3">#8b0c03</color>
     <color name="igniteColor4">#280201</color>
