--- a/app/src/main/res/layout/fragment_about_event.xml
+++ b/app/src/main/res/layout/fragment_about_event.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/black"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
@@ -31,15 +32,16 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
                 app:expandedTitleTextAppearance="@android:color/transparent"
                 android:fitsSystemWindows="true"
                 >
+
                 <ImageView
-                    app:layout_collapseMode="parallax"
+                    android:id="@+id/about_page_image_view"
                     android:layout_width="match_parent"
                     android:layout_height="350dp"
 
-                    android:src="@drawable/igg"
                     android:contentDescription="@string/app_name"
                     android:scaleType="centerCrop"
-                    />
+                    android:src="@drawable/igg"
+                    app:layout_collapseMode="parallax" />
                 <androidx.appcompat.widget.Toolbar
 
                     android:layout_width="match_parent"
@@ -62,97 +64,144 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
             android:clipToPadding="false"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             >
-
-            <androidx.cardview.widget.CardView
-
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent">
 
-                android:layout_marginBottom="16dp"
-                app:cardElevation="5dp"
-                app:cardUseCompatPadding="true">
 
-                <LinearLayout
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
-                    <TextView
-                        android:padding="12dp"
-                        android:textSize="20sp"
-                        android:layout_marginTop="12dp"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorPrimaryText"
-                        android:id="@+id/event_name_about_event"
-                        android:text="Ignite 2k'19 welcomes you all!"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                    <LinearLayout
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/cardView4" >
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/event_rules_about_event"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:text="@string/ignite_rules"
+                            android:textSize="14sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.0"
+                            app:layout_constraintStart_toStartOf="@+id/textView15"
+                            app:layout_constraintTop_toBottomOf="@+id/textView15" />
+
+                        <TextView
+                            android:id="@+id/textView15"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:text="@string/ignite_rules"
+                            android:textStyle="bold"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.0"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+
+                    android:id="@+id/cardView4"
+                    android:layout_width="match_parent"
+
+                    android:layout_height="match_parent"
+                    app:cardElevation="5dp"
+                    app:cardUseCompatPadding="true">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="12dp"
-                        android:orientation="horizontal"
-                        >
+                        android:orientation="vertical">
+
+
                         <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="44dp"
+                            android:id="@+id/imageView5"
+                            android:layout_width="32dp"
+                            android:layout_height="56dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
                             android:layout_weight="1"
-                            android:src="@drawable/ic_clock"/>
+                            android:src="@drawable/ic_clockxx"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <ImageView
+                            android:id="@+id/imageView6"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
+                            android:src="@drawable/ic_venue"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+
+
                         <TextView
-                            android:layout_gravity="center_vertical"
+
+                            android:id="@+id/event_desc_about_event"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:lineSpacingMultiplier="1.5"
+
                             android:padding="12dp"
+                            android:text="@string/about_ignite_info"
+                            android:textSize="14sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.0"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+
+                        <TextView
+                            android:id="@+id/about_page_date_time_textview"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:text="textco"
+                            android:textColor="@color/black"
                             android:textSize="14sp"
                             android:textStyle="bold"
-                            android:textColor="@color/colorPrimaryText"
-                            android:text="11 oct 2019"
-                            android:layout_width="0dp"
-                            android:layout_weight="9"
+                            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
+                            app:layout_constraintStart_toEndOf="@+id/imageView5"
+                            app:layout_constraintTop_toTopOf="@+id/imageView5" />
 
-                            android:layout_height="wrap_content"/>
-
-
-                    </LinearLayout>
-                    <TextView
-
-                        android:padding="12dp"
-                        android:textSize="14sp"
-                        android:lineSpacingMultiplier="1.5"
-                        android:layout_marginTop="12dp"
-                        android:text="@string/about_ignite_info"
-                        android:id="@+id/event_desc_about_event"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="9"
-                        android:padding="12dp"
-                        android:text="@string/ignite_rules"
-                        android:textColor="@color/colorPrimaryText"
-                        android:textSize="14sp"
-                        android:id="@+id/event_rules_about_event"
-                        android:textStyle="bold" />
+                        <TextView
+                            android:id="@+id/about_page_venue_textview"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="TextView"
+                            android:textColor="@color/black"
+                            android:textStyle="bold"
+                            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.0"
+                            app:layout_constraintStart_toStartOf="@+id/about_page_date_time_textview"
+                            app:layout_constraintTop_toTopOf="@+id/imageView6" />
 
 
-                </LinearLayout>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
-
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_fav"
-            app:elevation="6dp"
-            app:pressedTranslationZ="12dp"
-            app:layout_anchor="@id/app_bar_layout"
-            app:layout_anchorGravity="bottom|right|end"/>
-
-
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
